force-app/main/default/objects/Index_Future_Tracking__c/Index_Future_Tracking__c.object-meta.xml
<CustomObject>
    <label>Index Future Tracking</label>
    <nameField>
        <label>Index Future Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Index Future Trackings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>