force-app/main/default/objects/Index_Future_Tracking__c/fields/As_of_date__c.field-meta.xml
<CustomField>
    <fullName>As_of_date__c</fullName>
    <label>As of date</label>
    <type>Date</type>
</CustomField>