force-app/main/default/objects/Index_Future_Tracking__c/fields/Index_Future__c.field-meta.xml
<CustomField>
    <fullName>Index_Future__c</fullName>
    <label>Index Future</label>
    <referenceTo>Index_Future__c</referenceTo>
    <relationshipLabel>Index Future Trackings</relationshipLabel>
    <relationshipName>Index_Future_Trackings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>