force-app/main/default/objects/Index_Future_Tracking__c/fields/Index_Parent__c.field-meta.xml
<CustomField>
    <fullName>Index_Parent__c</fullName>
    <label>Index Parent</label>
    <referenceTo>Index__c</referenceTo>
    <relationshipLabel>Index Future Trackings</relationshipLabel>
    <relationshipName>Index_Future_Trackings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>