force-app/main/default/objects/Index_Future_Tracking__c/fields/informatica_cloud_key__c.field-meta.xml
<CustomField>
    <fullName>informatica_cloud_key__c</fullName>
    <externalId>true</externalId>
    <label>informatica cloud key</label>
    <length>80</length>
    <type>Text</type>
</CustomField>