force-app/main/default/objects/Index_Future_Tracking__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Value</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>