force-app/main/default/objects/Index_Future_Tracking__c/listViews/Updated_Today.listView-meta.xml
<ListView>
    <fullName>Updated_Today</fullName>
    <columns>NAME</columns>
    <columns>Index_Future__c</columns>
    <columns>Index_Parent__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Updated Today</label>
    <language>en_US</language>
</ListView>